--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
   <head>
     <link rel="stylesheet" href="style.css" />
     <script defer src="main.js"></script>
- 
   </head>
   <body>
     <title>magic 8ball</title>
     <h1>Ask the 8-Ball a question...</h1>
     <hr />
-    <p>Type in a yes/no question then click the 8ball to get a response.</p>
+    <p>Type in a yes/no question then click the 8ball to get a response</p>
     <h2>question:</h2>
-    <p><input id="input" class="input" type="text" /></p>
-<button id="btn"><img src="img/kisspng-8-ball-pool-magic-8-ball-eight-ball-billiard-ball-8-ball-pool-png-photos-5a74d2f74272c3.5980465215176056232722.jpg" alt="">
+    <p><input id="inputEl" class="input" type="text" /></p>
+    <button id="btn">
+      <img
+        src="img/kisspng-8-ball-pool-magic-8-ball-eight-ball-billiard-ball-8-ball-pool-png-photos-5a74d2f74272c3.5980465215176056232722.jpg"
+        alt=""
+      />
     </button>
-    <h2 id="output" class="output">Answer: </h2>
+    <h2>Answer: <span id="outputEl"></span></h2>
   </body>
 </html>
