--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <hr />
     <p>Type in a yes/no question then click the 8ball to get a response</p>
     <h2>question:</h2>
-    <p><input id="inputEl" class="input" type="text" /></p>
+    <p><input id="input" class="input" type="text" /></p>
     <button id="btn">
       <img
         src="img/kisspng-8-ball-pool-magic-8-ball-eight-ball-billiard-ball-8-ball-pool-png-photos-5a74d2f74272c3.5980465215176056232722.jpg"
         alt=""
       />
     </button>
-    <h2>Answer: <span id="outputEl"></span></h2>
+    <h2>Answer: <span id="output"></span></h2>
   </body>
 </html>
